--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,6 @@
 
 /* Show red border when stuff has been typed in, but its invalid */
 .ng-dirty.ng-invalid {
-  border-color:#ec3f41;
+    border-color:#ec3f41;
+    border-width:medium;
 }
