--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -1,12 +1,12 @@
-<form name="editActivity" ng-show="editing" ng-submit="editing = false; editEntry(activity)" novalidate >
+<form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(activity)" novalidate >
     <label>Title:</label>
-    <input type="text" ng-model="activity['0']['title'][activity.0.langcode]" placeholder="Title" required />
+    <input type="text" ng-model="editActivity['0']['title'][editActivity.0.langcode]" placeholder="Title" required />
     <label>Langcode:</label>
-    <select ng-model="activity.0.langcode" required >
+    <select ng-model="editActivity.0.langcode" required >
         <option value="en">English</option>
         <option value="ru">Russian</option>
     </select>
     
     <br/>
-    <button class="btn" type="submit" ng-disabled="editActivity.$invalid">Save</button>
+    <button class="btn" type="submit" ng-disabled="editorActivity.$invalid">Save</button>
 </form>
