--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -1,4 +1,4 @@
-<form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(activity)" novalidate >
+<form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(editbActivity)" novalidate >
     <label>Title:</label>
     <input type="text" ng-model="editbActivity['0']['title'][editbActivity.0.langcode]" placeholder="Title" required />
     <label>Langcode:</label>
