Finalize IndexedDB support

--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -2,7 +2,7 @@
     <label>Title:</label>
     <input type="text" ng-model="editbActivity['0']['title'][editbActivity.0.langcode]" placeholder="Title" required />
     <label>Langcode:</label>
-    <select ng-model="editbActivity.0.langcode" required >
+    <select ng-model="activity.0.langcode" required >
         <option value="en">English</option>
         <option value="ru">Russian</option>
     </select>
