Finalize IndexedDB support

--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -2,10 +2,11 @@
     <label>Title:</label>
     <input type="text" ng-model="editbActivity['0']['title'][editbActivity.0.langcode]" placeholder="Title" required />
     <label>Langcode:</label>
-    <select ng-model="activity.0.langcode" required >
+    <!--<select ng-model="activity.0.langcode" required >
         <option value="en">English</option>
         <option value="ru">Russian</option>
-    </select>
+    </select> -->
+    <button class="btn" ng-click="changeEntryLang(editbActivity)">To en</button>
     
     <br/>
     <button class="btn" type="submit" ng-disabled="editorActivity.$invalid">Save</button>
