--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -6,7 +6,7 @@
         <option value="en">English</option>
         <option value="ru">Russian</option>
     </select> -->
-    <button class="btn" ng-click="changeEntryLang(editbActivity)">To en</button>
+    <button ng-click="changeEntryLang(editbActivity)">To en</button>
     
     <br/>
     <button class="btn" type="submit" ng-disabled="editorActivity.$invalid">Save</button>
