--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -2,7 +2,8 @@
     <label>Title:</label>
     <input type="text" ng-model="editbActivity['0']['title'][editbActivity.0.langcode]" placeholder="Title" required />
     <label>Langcode:</label>
-    <select ng-model="editbActivity[editbActivity['lastVersion']]['langcode']" required >
+    <!--<select ng-model="editbActivity[editbActivity['lastVersion']]['langcode']" required >-->
+    <select ng-model="editbActivityLangcode" required >
         <option value="en">English</option>
         <option value="ru">Russian</option>
     </select>
