--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -1,6 +1,6 @@
 <form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(editbActivity)" novalidate >
     <label>Title:</label>
-    <input type="text" ng-model="editbActivity['0']['title'][editbActivity.0.langcode]" placeholder="Title" required />
+    <input type="text" ng-model="editbActivity[editbActivity['lastVersion']]['title'][editbActivity[editbActivity['lastVersion']]['langcode']]" placeholder="Title" required />
     <label>Langcode:</label>
     <!--<select ng-model="editbActivity[editbActivity['lastVersion']]['langcode']" required >-->
     <select ng-model="editbActivityLangcode" required >
