--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -1,4 +1,4 @@
-<form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(editbActivity)" novalidate >
+<form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(editbActivity, editbActivityLangcode)" novalidate >
     <label>Title:</label>
     <input type="text" ng-model="editbActivity[editbActivity['lastVersion']]['title'][editbActivity[editbActivity['lastVersion']]['langcode']]" placeholder="Title" required />
     <label>Langcode:</label>
