--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,2 +1,2 @@
 <h2>Activity #{{activity_id}}</h2>
-Here are the details for activity <b>#{{activity_id}}</b>.
+Here are the details for activity <b>#{{activity.uuid}}</b>.
