Add second page to app

--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,4 +1,4 @@
-<h2>Activity #{{activity_id}}</h2>
+<h2>Activity #{{activityID}}</h2>
 Here are the details for activity <b>{{activity.uuid}}</b>.</br>
 Last version: <b>{{activity.lastVersion}}</b></br>
 Created: <b>{{activity[activity['lastVersion']]['createdTimeStamp']}}</b></br>
