--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,5 +1,7 @@
-<h2>Activity #{{activityID}}</h2>
-Here are the details for activity <b>{{activity.uuid}}</b>.</br>
-Last version: <b>{{activity.lastVersion}}</b></br>
-Created: <b>{{activity[activity['lastVersion']]['createdTimeStamp']}}</b></br>
-Modified: <b>{{activity[activity['lastVersion']]['modifiedTimeStamp']}}</b></br>
+<div ng-controller="showActivityController">
+    <h2>Activity #{{activityID}}</h2>
+    Here are the details for activity <b>{{activity.uuid}}</b>.</br>
+    Last version: <b>{{activity.lastVersion}}</b></br>
+    Created: <b>{{activity[activity['lastVersion']]['createdTimeStamp']}}</b></br>
+    Modified: <b>{{activity[activity['lastVersion']]['modifiedTimeStamp']}}</b></br>
+</div>
