Execute init code first

--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,5 +1,5 @@
-    <h2>Activity #{{activity2ID}}</h2>
-    Here are the details for activity <b>{{activity2.uuid}}</b>.</br>
-    Last version: <b>{{activity2.lastVersion}}</b></br>
-    Created: <b>{{activity2[activity2['lastVersion']]['createdTimeStamp']}}</b></br>
-    Modified: <b>{{activity2[activity2['lastVersion']]['modifiedTimeStamp']}}</b></br>
+    <h2>Activity #{{activityID}}</h2>
+    Here are the details for activity <b>{{activity.uuid}}</b>.</br>
+    Last version: <b>{{activity.lastVersion}}</b></br>
+    Created: <b>{{activity[activity['lastVersion']]['createdTimeStamp']}}</b></br>
+    Modified: <b>{{activity[activity['lastVersion']]['modifiedTimeStamp']}}</b></br>
