--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
-/* Show green border when stuff has been typed in, and its valid */
+/* CSS code to indicate correctly and incorrectly filled fields */
+
+/* Show green border when something has been typed in, and it is valid */
 .ng-dirty.ng-valid {
     border-color:#3a7d34;
     border-width:medium;
 }
 
-/* Show red border when stuff has been typed in, but its invalid */
+/* Show red border when something has been typed in, but it is invalid */
 .ng-dirty.ng-invalid {
     border-color:#ec3f41;
     border-width:medium;
