--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -3,7 +3,7 @@
     
     <!--Activity title-->
     <label>Title:</label>
-    <input type="text" ng-model="editActivity[editActivity['lastVersion']]['title'][editActivity[editActivity['lastVersion']]['langcode']]" placeholder="Title" required />
+    <input type="text" ng-model="editActivity[editActivity['lastVersion']]['title'][editActivity[editActivity['lastVersion']]['langcode']]" placeholder="Title" required >
     
     <!--Activity language-->
     <label>Langcode:</label>
