--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -1,13 +1,13 @@
 <!--Form to edit existing activity-->
-<form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(editActivity, editActivityLangcode)" novalidate >
+<form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(editbActivity, editbActivityLangcode)" novalidate >
     
     <!--Activity title-->
     <label>Title:</label>
-    <input type="text" ng-model="editActivity[editActivity['lastVersion']]['title'][editActivity[editActivity['lastVersion']]['langcode']]" placeholder="Title" required >
+    <input type="text" ng-model="editbActivity[editbActivity['lastVersion']]['title'][editbActivity[editbActivity['lastVersion']]['langcode']]" placeholder="Title" required >
     
     <!--Activity language-->
     <label>Langcode:</label>
-    <select ng-model="editActivityLangcode" required >
+    <select ng-model="editbActivityLangcode" required >
         <option value="en">English</option>
         <option value="ru">Russian</option>
     </select>
