--- a/templates/edit-activity.html
+++ b/templates/edit-activity.html
@@ -1,5 +1,6 @@
-
 <form name="editorActivity" ng-show="editing" ng-submit="editing = false; editEntry(editbActivity, editbActivityLangcode)" novalidate >
+    <!--You should not put anything outside <form> tag, even comments-->
+    <!--Form to edit existing activity-->
     
     <!--Activity title-->
     <label>Title:</label>
